# ecom-discount-engine

./: LICENSE  README.md  contributing.md  pyproject.toml
src/: __init__.py  fake_data.py  models.py  rules.py  services.py
tests/: test_rules.py  test_services.py
