[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ecom-discount-engine"
version = "0.0.1"
authors = [
  { name="Siddharth", email="siddharthdangarh872@gmail.com" },
]
description = "A discount engine for e-commerce platforms."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # Add your runtime dependencies here.
]

[project.urls]
"Homepage" = "https://github.com/mizunus/ecom-discount-engine" # Replace with your repo URL
"Bug Tracker" = "https://github.com/mizunus/ecom-discount-engine/issues" # Replace

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]